<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#098E81"
        tools:context=".ChessFormats">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/classic"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <Button
                android:id="@+id/button_classic_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="60 min"
                android:textColor="#0C0C0C"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_classic_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="30 min"
                android:textColor="#100F0F"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_classic_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="45 | 45"
                android:textColor="#0E0D0D"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/Rapid"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="337dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.451"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <Button
                android:id="@+id/button_rapid_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="10 | 5"
                android:textColor="#0E0E0E"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_rapid_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="15 | 10"
                android:textColor="#131313"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_rapid_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="20 | 5"
                android:textColor="#0B0A0A"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/Blitz"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="340dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <Button
                android:id="@+id/button_blitz_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="5 | 2"
                android:textColor="#0C0C0C"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_blitz_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="3 | 2"
                android:textColor="#100F0F"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_blitz_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="5 | 5"
                android:textColor="#121111"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/Bullet"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="342dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <Button
                android:id="@+id/button_bullet_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="1 | 2"
                android:textColor="#0B0A0A"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_bullet_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="2 | 1"
                android:textColor="#090909"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_bullet_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#DF876B"
                android:focusable="true"
                android:text="2 | 2"
                android:textColor="#101010"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="65dp"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/ic_chess_clock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="345dp"
            android:layout_height="wrap_content"
            android:text="@string/formats_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="32dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
